Added footer navigation with links

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,10 @@
 <footer>
-    <h1>FOOTER CONTENT</h1>
+    <h1>Sample Footer</h1>
     <p>This is my footer part</p>
+    <nav>
+        <ul>
+            <li>Link1</li>
+            <li>Link2</li>
+        </ul>
+    </nav>
 </footer>
